<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/teal_200"
    tools:context=".HomeActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingStart="8dp"
        android:paddingTop="16dp"
        android:paddingEnd="8dp"
        android:paddingBottom="16dp">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/aclonica1"
            android:text="@string/enter_the_number_of_matches_played"
            android:textColor="#070707"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/matches"
            android:layout_width="148dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:autoText="false"
            android:background="#F3C4C4"
            android:ems="10"
            android:fontFamily="@font/aclonica1"
            android:hint="@string/matches"
            android:inputType="number"
            android:textColor="#131212"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/aclonica1"
            android:text="@string/enter_the_total_number_of_kills"
            android:textColor="#131212"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/kills"
            android:layout_width="137dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="#F3C4C4"
            android:ems="10"
            android:fontFamily="@font/aclonica1"
            android:hint="@string/kills"
            android:inputType="number"
            android:textColor="#131313"
            android:textSize="26sp" />

        <Button
            android:id="@+id/calculate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="#D9F4F0"
            android:fontFamily="@font/aclonica1"
            android:shadowColor="#0B0A0A"
            android:text="@string/calculate"
            android:textSize="22sp"
            app:rippleColor="#120F0F" />

        <TextView
            android:id="@+id/Result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="#D4EABC"
            android:fontFamily="@font/aclonica1"
            android:textColor="#0B0A0A"
            android:textSize="30sp" />

        <ImageButton
            android:id="@+id/reset"
            android:layout_width="53dp"
            android:layout_height="53dp"
            android:layout_marginTop="5dp"
            android:contentDescription="reset"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/rest" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/aclonica1"
            android:text="@string/tip"
            android:textColor="#E12424"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/aclonica"
            android:text="@string/Squad"
            android:textColor="#673AB7"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/aclonica"
            android:text="@string/this_app_has_no_ads"
            android:textColor="#060707"
            android:textSize="14sp" />


    </LinearLayout>
</RelativeLayout>